manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: training
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: hello-world
