manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: training
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: k8straining.helloworld.iss
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
